initial health svc setup + need to implement logic for setting health stats json
