# Processing/app.py
@@ -44,6 +44,9 @@ logger = logging.getLogger('basicLogger')
 logger.info("App Conf File: %s" % app_conf_file) 
 logger.info("Log Conf File: %s" % log_conf_file)
 
+def health_check():
+    return "Service is healthy", 200
+
 def populate_stats():
     ''' Periodically update stats '''
     logger.info("Start Periodic Processing")
